# NesDebugger

./: CMakeLists.txt  README.md  breakpoint_win.c  breakpoint_win.h  breakpoint_window.xml  cpu.c  cpu.h  debugger_app.c  debugger_app.h  debugger_win.c  debugger_win.h  debuggerapp.gresource.xml  disassembler.c  disassembler.h  disassembler_win.c  disassembler_win.h  disassembler_window.xml  drawing.c  drawing.h  main.c  memory.c  memory.h  memory_win.c  memory_win.h  memory_window.xml  nes.c  nes.h  oam_win.c  oam_win.h  oam_window.xml  ppu-memory.c  ppu-memory.h  ppu.c  ppu.h  ppu_registers_win.c  ppu_registers_win.h  ppu_registers_window.xml  ppu_tables_win.c  ppu_tables_win.h  ppu_tables_window.xml  (+4 more)
